[package]
name = "nymsphinx-types"
version = "0.1.0"
authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sphinx = { git = "https://github.com/nymtech/sphinx", rev="b5def42c7058b959cf3e0d1bcebf7ff71369931f" }
#sphinx = { path = "../../../../sphinx"}
