[package]
name = "nym-sphinx-types"
version = "0.2.0"
description = "Re-export sphinx packet types"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
sphinx-packet = { workspace = true }
nym-outfox = { path = "../../../nym-outfox" }
thiserror = "1"
